<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_publisher</name>
  <version>0.1.0</version>
  <description>the waypoint waypoint_publisher</description>
  <maintainer email="tsukutsuku@roboken.iit.tsukuba.ac.jp">tsukutsuku</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 